--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <h1
             class="text-5xl font-bold text-center lg:text-6xl lg:maxw-md lg:text-left"
           >
-            More Than Just shorter links
+            More than just shorter links
           </h1>
           <p
             class="text-2xl text-center text-gray-400 lg:max-w-md lg:text-left"
@@ -278,8 +278,8 @@
             Fully Customizable
           </h5>
           <p class="text-center text-gray-400 md:text-left">
-            Improve brand awarenessa and content discoverability through
-            customizable links, supercharing audience engagement.
+            Improve brand awareness and content discoverability through
+            customizable links, supercharging audience engagement.
           </p>
         </div>
       </div>
